add filter by category menus
